// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createFetchApiHeadersMiddleware Should work with a request input 1`] = `
[
  Request {
    method: 'GET',
    url: 'https://test.com/',
    headers: Headers { Header1: 'xyz', header2: 'def', header4: '123' },
    destination: '',
    referrer: 'about:client',
    referrerPolicy: '',
    mode: 'cors',
    credentials: 'same-origin',
    cache: 'default',
    redirect: 'follow',
    integrity: '',
    keepalive: false,
    isReloadNavigation: false,
    isHistoryNavigation: false,
    signal: AbortSignal { aborted: false }
  },
  undefined,
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a request input without headers 1`] = `
[
  Request {
    method: 'GET',
    url: 'https://test.com/',
    headers: Headers { Header1: 'xyz' },
    destination: '',
    referrer: 'about:client',
    referrerPolicy: '',
    mode: 'cors',
    credentials: 'same-origin',
    cache: 'default',
    redirect: 'follow',
    integrity: '',
    keepalive: false,
    isReloadNavigation: false,
    isHistoryNavigation: false,
    signal: AbortSignal { aborted: false }
  },
  undefined,
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input with an empty init 1`] = `
[
  "https://test.com",
  {
    "headers": [
      [
        "header1",
        "abc",
      ],
      [
        "header2",
        "def",
      ],
      [
        "header4",
        "123",
      ],
    ],
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input with an empty init, but no headers 1`] = `
[
  "https://test.com",
  {
    "headers": [],
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input with an empty init, but no headers 2`] = `
[
  "https://test.com/",
  {
    "headers": [],
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input with an init with header array 1`] = `
[
  "https://test.com",
  {
    "headers": [
      [
        "Header1",
        "xyz",
      ],
      [
        "header2",
        "def",
      ],
      [
        "header4",
        "123",
      ],
    ],
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input with an init with header object 1`] = `
[
  "https://test.com",
  {
    "headers": {
      "Header1": "xyz",
      "header2": "def",
      "header4": "123",
    },
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input with an init with headers instance 1`] = `
[
  "https://test.com",
  {
    "headers": Headers {
      Symbol(headers list): HeadersList {
        "cookies": null,
        Symbol(headers map): Map {
          "header1" => {
            "name": "Header1",
            "value": "xyz",
          },
          "header2" => {
            "name": "header2",
            "value": "def",
          },
          "header4" => {
            "name": "header4",
            "value": "123",
          },
        },
        Symbol(headers map sorted): null,
      },
      Symbol(guard): "none",
    },
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input without init 1`] = `
[
  "https://test.com",
  {
    "headers": [
      [
        "header1",
        "abc",
      ],
      [
        "header2",
        "def",
      ],
      [
        "header4",
        "123",
      ],
    ],
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input without init, but no headers 1`] = `
[
  "https://test.com",
  undefined,
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a string input without init, but no headers 2`] = `
[
  "https://test.com/",
  undefined,
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a url input with an empty init 1`] = `
[
  "https://test.com/",
  {
    "headers": [
      [
        "header1",
        "abc",
      ],
      [
        "header2",
        "def",
      ],
      [
        "header4",
        "123",
      ],
    ],
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a url input with an init with header array 1`] = `
[
  "https://test.com/",
  {
    "headers": [
      [
        "Header1",
        "xyz",
      ],
      [
        "header2",
        "def",
      ],
      [
        "header4",
        "123",
      ],
    ],
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a url input with an init with header object 1`] = `
[
  "https://test.com/",
  {
    "headers": {
      "Header1": "xyz",
      "header2": "def",
      "header4": "123",
    },
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a url input with an init with headers instance 1`] = `
[
  "https://test.com/",
  {
    "headers": Headers {
      Symbol(headers list): HeadersList {
        "cookies": null,
        Symbol(headers map): Map {
          "header1" => {
            "name": "Header1",
            "value": "xyz",
          },
          "header2" => {
            "name": "header2",
            "value": "def",
          },
          "header4" => {
            "name": "header4",
            "value": "123",
          },
        },
        Symbol(headers map sorted): null,
      },
      Symbol(guard): "none",
    },
  },
]
`;

exports[`createFetchApiHeadersMiddleware Should work with a url input without init 1`] = `
[
  "https://test.com/",
  {
    "headers": [
      [
        "header1",
        "abc",
      ],
      [
        "header2",
        "def",
      ],
      [
        "header4",
        "123",
      ],
    ],
  },
]
`;
